pod-security/disallow-privileged-containers/.chainsaw-test/invalid-privileged-init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-privileged-init
spec:
  initContainers:
    - name: init
      image: nginx:1.25
      securityContext:
        privileged: true
  containers:
    - name: app
      image: nginx:1.25
