pod-security/disallow-privileged-containers/.chainsaw-test/invalid-privileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-privileged
spec:
  containers:
    - name: app
      image: nginx:1.25
      securityContext:
        privileged: true
